// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Icon> Snapshots and structure should render color & color variant 1`] = `
<i
  className="lumx-icon lumx-icon--color-primary lumx-icon--color-variant-D1 lumx-icon--size-m lumx-icon--no-shape"
>
  <svg
    aria-hidden="true"
    height="1em"
    preserveAspectRatio="xMidYMid meet"
    style={
      Object {
        "verticalAlign": "-0.125em",
      }
    }
    viewBox="0 0 24 24"
    width="1em"
  >
    <path
      d="mdiPlus"
      fill="currentColor"
    />
  </svg>
</i>
`;

exports[`<Icon> Snapshots and structure should render correctly 1`] = `
<i
  className="lumx-icon lumx-icon--color-dark lumx-icon--size-m lumx-icon--no-shape"
>
  <svg
    aria-hidden="true"
    height="1em"
    preserveAspectRatio="xMidYMid meet"
    style={
      Object {
        "verticalAlign": "-0.125em",
      }
    }
    viewBox="0 0 24 24"
    width="1em"
  >
    <path
      d="mdiPlus"
      fill="currentColor"
    />
  </svg>
</i>
`;
